I solved the overflow problem and the navbar problem

--- a/src/index.css
+++ b/src/index.css
@@ -1,44 +1,15 @@
-:root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  width: 100%;
-  min-width: 400px;
-  max-width: none;
-  color-scheme: light dark;
-  color: black;
-  background-color: white;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-  margin: 0px;
-  padding: 0px;
-}
-
-
 body {
   width: 100%;
   margin: 0;
-  padding: 0;
-  min-width: 320px;
-  min-height: 100vh;
   background-color: white;
   font-family: "Poppins", normal;
-  display: flex;
-  justify-content: center;
 }
 
 .App{
   display: flex;
   flex-direction: column;
-  justify-content: center;
   padding-bottom: 100px;
-  margin:0;
-  padding: 0;
-  width: 100%;
+
 }
 
 
@@ -47,6 +18,7 @@ body {
   box-shadow: 5px 3px 10px 2px rgba(187, 186, 186, 0.418);
   /* box-sizing: border-box; */
   width: 100%;
+  display: flex;
 }
 
 
@@ -63,6 +35,8 @@ body {
 .logo{
   height: 25px;
   width: 82px;
+  padding-left: 30px;
+  padding-top: 24px;
 }
 
 .header{
@@ -72,6 +46,8 @@ body {
  line-height: 110%;
  margin-left: 5%;
  margin-right: 5%;
+display: flex;
+flex-direction: column;
 }
 
 .headerImage{
@@ -80,7 +56,6 @@ body {
   /* height: 232px; */
   padding-right: 36px;
   padding-left: 36px;
-  display: -webkit-box;
   margin-left: auto;
 }
 
@@ -103,24 +78,21 @@ body {
 .cardDiv{
   margin-left: 36px;
   margin-top: 35px;
+  margin-right: 36px;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  overflow-x: auto;
 }
 
 .card {
   width: 176px;
   padding: 10px;
-  /* flex: 0 0 auto;   */
 }
 .card--imgButtonDiv{
   width: 176px;
   height: 235px;
   border-radius: 6px;
   position: relative;
-  /* background-image: url("./assets/zaferes.png"); */
-  /* background-repeat: no-repeat; */
-  /* background-size: 176px 235px; */
-
 }
 
 .card--img{
@@ -197,7 +169,7 @@ body {
 
   .headerImage {
     padding-right: 5%;
-    width: 67%;
+    width: 70%;
     max-width: 600px;
   }
 
@@ -211,12 +183,9 @@ body {
   /* .card{
     padding: 30px
   }
-
 } 
-
 /* @media only screen and (min-width: 800px) {
   .title {
     margin-top: 100px;
   }
 } */
-
